Fix broken preferred widths optimization involving subtree layout roots

Fix broken preferred widths optimization involving subtree layout roots
https://bugs.webkit.org/show_bug.cgi?id=247742

Reviewed by Alan Baradlay.

Merge - https://chromium.googlesource.com/chromium/blink/+/ed902d339fbff3a62e2f6124d8d40bbad45e97c0

This patch is to remove optimization or fix introduced in 2006, which is about RenderBox::computePreferredLogicalWidths
to bail when in a subtree layout.
This can result in a box not updating its preferred widths even when it
should in the case that its a subtree layout root that was marked for layout
of its children, then subsequently marked for layout itself.

* Source/WebCore/rendering/RenderBox.cpp:
(RenderBox:computeLogicalWidthInFragment): Remove "subtree' layout optimization
* LayoutTests/fast/layout/nested-subtree-layout-preferred-widths.html: Added Test Case
* LayoutTests/fast/layout/nested-subtree-layout-preferred-widths-expected.html: Added Test Case Expectation
* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/contain-intrinsic-size/auto-006-expected.txt: Updated Test Expectations
* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/contain-intrinsic-size/auto-010-expected.txt: Ditto

Canonical link: https://commits.webkit.org/256623@main